fixed some layout issues

--- a/public/style.css
+++ b/public/style.css
@@ -6,3 +6,6 @@ body {
 	background-color: #CCFFFF
 }
 
+.posted-on{
+	font-size: 10px;
+}
